# kanban

./: .gitignore  AGENT_PROTOCOL.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  REQUIREMENTS.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/commands/: check.md  lint.md  perf.md  test.md
.github/workflows/: ci.yml  pages.yml  release.yml
Casks/: kanban.rb
Formula/: kanban.rb
crates/kanban-cli/: Cargo.toml
crates/kanban-cli/src/: cli.rs  exit.rs  main.rs  output.rs
crates/kanban-cli/src/cmd/: batch.rs  export.rs  import.rs  issue.rs  label.rs  mod.rs  project.rs  search.rs  status.rs  undo.rs
crates/kanban-cli/tests/: batch.rs  cmd_misc.rs  help.rs  issue_cmds.rs  label_cmds.rs  perf.rs  project_cmds.rs  smoke_e2e.rs
crates/kanban-cli/tests/snapshots/: cmd_misc__status_list_default.snap  issue_cmds__issue_history_after_priority.snap  issue_cmds__issue_list_priority_sort.snap  label_cmds__label_list_two_labels.snap
crates/kanban-core/: Cargo.toml
crates/kanban-core/migrations/: 0001_init.sql
crates/kanban-core/src/: error.rs  ids.rs  lib.rs  operation.rs  query.rs  serde_f64.rs  snapshot.rs  time.rs  types.rs  undo.rs  validate.rs  workspace.rs
crates/kanban-core/src/apply/: issues.rs  labels.rs  mod.rs  projects.rs  snapshot.rs
crates/kanban-core/src/store/: connection.rs  migrations.rs  mod.rs
crates/kanban-core/src/store/read/: issues.rs  labels.rs  log.rs  mod.rs  projects.rs  search.rs  statuses.rs
crates/kanban-core/src/store/write/: issues.rs  labels.rs  mod.rs  operation_log.rs  projects.rs  statuses.rs
crates/kanban-core/tests/: activity_log.rs  apply_issues.rs  apply_labels.rs  apply_projects.rs  inverse_subtree.rs  query_issues.rs  search.rs  snapshot_export.rs  snapshot_import.rs  snapshot_roundtrip.rs  undo_redo.rs  undo_redo_property.proptest-regressions  undo_redo_property.rs
docs/: DOCUMENTATION_MANIFEST.md  QUICK_REFERENCE.md  README.md  architecture.puml  erd.puml  sequence-agent-registration.puml  sequence-task-claim.puml  sequence-validation.puml
docs/site/: index.html  index.md
e2e/: playwright.config.ts
e2e/fixtures/: test-base.ts
e2e/helpers/: actions.ts
e2e/phase-1-navigation/: navigation.spec.ts
e2e/phase-2-board/: board.spec.ts
e2e/phase-3-issue-lifecycle/: issue-lifecycle.spec.ts
e2e/phase-4-search-filtering/: search-filtering.spec.ts
e2e/phase-5-keyboard-shortcuts/: keyboard-shortcuts.spec.ts
e2e/phase-6-settings-members/: settings-members.spec.ts
e2e/workflows/: assign-user.spec.ts  code-explorer-empty.spec.ts  code-explorer.spec.ts  comments.spec.ts  create-branch.spec.ts  create-issue.spec.ts  custom-fields.spec.ts  edit-issue.spec.ts  filter-and-search.spec.ts  git-integration.spec.ts  issue-code-context.spec.ts  manage-labels.spec.ts  manage-members.spec.ts  move-status.spec.ts  onboarding.spec.ts  project-lifecycle.spec.ts  star-duplicate-delete.spec.ts  sub-issues.spec.ts  terminal-project.spec.ts  terminal.spec.ts
scripts/: smoke-test-cli.sh
src/: App.tsx  geist-fonts.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240101000000_initial_schema.sql  20240102000000_add_comments.sql  20240103000000_custom_fields.sql  20260315000000_agent_orchestration.sql  20260315000000_postgres_schema.sql  20260316000000_agent_member_link.sql  20260316100000_agent_activity_tracking.sql  20260316200000_agent_worktree_project_path.sql  20260318000000_pipelines.sql
src-tauri/migrations_sqlite/: 20260317000000_initial_sqlite_schema.sql
src-tauri/src/: cli.rs  lib.rs  main.rs  mcp.rs  state.rs
src-tauri/src/commands/: advanced_search.rs  agent_analytics.rs  agents.rs  automations.rs  code_analysis.rs  comments.rs  context.rs  costs.rs  custom_fields.rs  decomposition.rs  diff_issues.rs  epics.rs  execution_logs.rs  explorer.rs  git_links.rs  github.rs  handoff.rs  health.rs  hooks.rs  issues.rs  labels.rs  learnings.rs  marketplace.rs  members.rs  mentions.rs  milestones.rs  mod.rs  nl_create.rs  notifications.rs  permissions.rs  pipelines.rs  projects.rs  recently_viewed.rs  recurring.rs  relations.rs  saved_views.rs  scoring.rs  shell.rs  sla.rs  stale_issues.rs  (+6 more)
src-tauri/src/db/: compat.rs  mod.rs  watcher.rs
src-tauri/src/models/: agent.rs  github.rs  mod.rs
src-tauri/src/orchestration/: cascade.rs  decomposition.rs  dependency.rs  metrics.rs  mod.rs  names.rs  routing.rs  state_machine.rs  timeout.rs  validation.rs
src-tauri/tests/: smoke.rs
src/components/: ActivityTicker.tsx  AgentDashboard.tsx  AgentPresence.tsx  AgentSkillTag.tsx  AttemptComparison.tsx  AttemptTabs.tsx  AuditLogView.tsx  BoardColumn.tsx  BoardView.tsx  CalendarView.tsx  CodeHeatMap.tsx  ConfidenceBadge.tsx  (+36 more)
(+88 files in other folders)
