[workspace]
resolver = "2"
members = ["crates/kanban-core", "crates/kanban-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["akassharjun"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
assert_cmd = "2"
insta = { version = "1", features = ["yaml", "filters"] }
proptest = "1"
tempfile = "3"
