[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

[lib]
name = "kanban_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "kanban"
path = "src/main.rs"

[[bin]]
name = "kanban-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "kanban-mcp"
path = "src/bin/mcp.rs"
