[package]
name = "kanban"
version = "0.4.0"
edition = "2021"
default-run = "kanban"

[lib]
name = "kanban_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
dotenvy = "0.15"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
redis-sync = ["redis"]

[[bin]]
name = "kanban"
path = "src/main.rs"
